--- a/pixel/wp-content/themes/pixel/css/main.css
+++ b/pixel/wp-content/themes/pixel/css/main.css
@@ -2620,7 +2620,12 @@ a.smore{
 
 .errIntro p {
 	color:#ffffff;
-	margin-top:30px;
+	margin:30px auto 0;
+	width:30%;
+}
+.errIntro .widget-search{
+	margin : 25px auto 0;
+	width:25%;
 }
 
 
